<resources>
    <string name="app_name">AnimationsAndroid</string>
    <string name="click_me">Click me</string>
    <string name="in">In</string>
    <string name="out">Out</string>
    <string name="fade_basic_animation">Fade Basic Animation</string>
    <string name="slide_basic_animation">Slide Basic Animation</string>
    <string name="explose_basic_animation">Explose Basic Animation</string>
    <string name="back">Voltar</string>
    <string name="next_scene">Next Scene</string>
    <string name="back_scene">Back Scene</string>
    <string name="slide_animation_another_way">Slide animation with different solution</string>
    <string name="animate">Animate</string>
    <string name="button_reload">Reload</string>
    <string name="button_list">List</string>
    <string name="button_list_with_header">List with header</string>
    <string name="button_grid">Grid</string>

    <string name="animation_slide_from_right">Slide from right</string>
    <string name="animation_slide_from_bottom">Slide from bottom</string>
    <string name="animation_fall_down">Fall down</string>
    <string name="animation_scale">Scale</string>
    <string name="animation_scale_random">Scale random</string>

    <string name="header_title">First item in the list</string>
    <string name="lorem_ipsom">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</string>
</resources>
